--- a/.github/workflows/platane-snk.yml
+++ b/.github/workflows/platane-snk.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Commit & Push
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name shayan
+          git config user.email shayan3k@github.com
           git add -A .
           git commit -m "generated"
           git push
