--- a/.github/workflows/platane-snk.yml
+++ b/.github/workflows/platane-snk.yml
@@ -20,10 +20,15 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+
+      ![](https://raw.githubusercontent.com/shayan3k/shayan3k/master/dist/github-contribution-grid-snake.svg)
+
+
+
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
-          target_branch: output
+          target_branch: master
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
